--- a/Version OFFLINE/css/styleInventario.css
+++ b/Version OFFLINE/css/styleInventario.css
@@ -33,10 +33,10 @@ section {
     width: 100%;
     height: 100vh;
     display: flex;
-/*     background-color: #2db0759d;
- */    background: rgb(167,167,167);
+    background: #4f47e6bd;
+/* background: rgb(167,167,167);
     background: linear-gradient(313deg, rgba(167,167,167,1) 0%, rgba(208,208,208,1) 28%);
-/*     background: linear-gradient(to top, #c1dfc4 0%, #deecdd 100%);
+    background: linear-gradient(to top, #c1dfc4 0%, #deecdd 100%);
  */
     
 }
