--- a/Version OFFLINE/css/styleReporte.css
+++ b/Version OFFLINE/css/styleReporte.css
@@ -51,6 +51,14 @@ section {
     
 }
 
+section .contentBox .formBox #alert{
+    display: none; 
+    margin-bottom: 8px;
+    height: 30px;
+    line-height:30px;
+    padding:0px 15px;
+}
+
 section .contentBox{
     display: flex;
     justify-content: center;
